--- a/webapp/index.html
+++ b/webapp/index.html
@@ -61,8 +61,8 @@
         //window.Telegram.WebApp.setBackgroundColor("#fffaf0");  // floralwhite
         window.Telegram.WebApp.setHeaderColor("#fffaf0");  // floralwhite
 
-        first_screen();
-        second_screen();
+        //first_screen();
+        //second_screen();
         play();
         start_countdown();
       }
@@ -168,8 +168,8 @@
             <div class="swiper-wrapper">
 
               <div class="swiper-slide">
-                <!- https://codepen.io/Totati/pen/pPXrJV ->
-                <!- https://github.com/andreruffert/scratchie.js ->
+                <!-- https://codepen.io/Totati/pen/pPXrJV -->
+                <!-- https://github.com/andreruffert/scratchie.js -->
                 <div class="container-" id="js-container">
                   <p id="js-canvas-explain">сотрите защитный слой<br>полностью</p>
                   <canvas class="canvas" id="js-canvas"></canvas>
@@ -198,7 +198,7 @@
             <h3>Сегодня</h3>
             <div id="now"><p>Нет</p></div>
             <h3>Завтра</h3>
-            <div id="to_second"><p>Нет</p></div>
+            <div id="next"><p>Нет</p></div>
           <h2 style="margin: 1.5em 0 0.3em 0">Ваша история и аналитика</h2>
             <div id="past"><p>Здесь будет история и аналитика по всем розыгрышам, в которых вы будете участвовать. Сегодня здесь пусто, но завтра уже что-то появится!</p></div>
             <br><br>
