--- a/webapp/index.html
+++ b/webapp/index.html
@@ -61,10 +61,8 @@
         //window.Telegram.WebApp.setBackgroundColor("#fffaf0");  // floralwhite
         window.Telegram.WebApp.setHeaderColor("#fffaf0");  // floralwhite
 
-        //first_screen();
-        //second_screen();
-        play();
-        start_countdown();
+        first_screen();
+        //start_countdown();
       }
     </script>
   </head>
@@ -141,8 +139,8 @@
           </div>
           <div class="col-lg-6 offset-lg-3 col-10 offset-1">
             <div id="second_screen">
-              <img id="logo_mk" style="border-radius: 8px 8px 0 0;" src="https://leonardo.edadeal.io/dyn/re/coupons/retailers/logos/sq/c378b8c860914bf3abdf8fd186e8ad33.png">
-              <img id="logo_lenta" style="border-radius: 0 0 8px 8px;" src="https://nlp-murmansk.ru/storage/app/media//%D0%BB%D0%B5%D0%BD%D1%82%D0%B0.png">
+              <img id="logo_mk" class="brand" style="border-radius: 8px 8px 0 0;" src="https://leonardo.edadeal.io/dyn/re/coupons/retailers/logos/sq/c378b8c860914bf3abdf8fd186e8ad33.png">
+              <img id="logo_lenta" class="brand" style="border-radius: 0 0 8px 8px;" src="https://nlp-murmansk.ru/storage/app/media//%D0%BB%D0%B5%D0%BD%D1%82%D0%B0.png">
             </div>
           </div>
           <div id="second_screen_explain">
