--- a/webapp/index.html
+++ b/webapp/index.html
@@ -73,8 +73,8 @@
         <div class="row">
           <div class="col-lg-6 offset-lg-3 col-10 offset-1">
             <div id="first_screen">
-              <h2>О вас</h2>
-              <p style="margin-bottom: 1em;">Прежде чем продолжить, расскажите нам, пожалуйста, немного о себе</p>
+              <h2>Добро пожаловать!</h2>
+              <p style="margin-bottom: 1em;">Прежде чем перейти к розыгрышам подарков, расскажите нам, пожалуйста, немного о себе.</p>
               <label>Регион, в котором вы живете:</label>
               <select id="region" class="form-select">
                 <option value="-1" selected>- выберите -</option>
@@ -172,7 +172,7 @@
                   <p id="js-canvas-explain">сотрите защитный слой<br>полностью</p>
                   <canvas class="canvas" id="js-canvas"></canvas>
                   <div id="ad"></div>
-                  <div id="ad_explain"><p>На этом экране под защитным слоем может находиться какое-то рекламное предложение от компании. Например, объявление о привозе, об акции "скидка на все", предложение посетить магазин / салон в декабре или в январе и т.д. &mdash; что угодно, что вы хотите сообщить вашей аудитории, людям, которые указали, что они <b><i>хотят</i></b> поучаствовать в розыгрыше подарков от вашей организации.</p></div>
+                  <div id="ad_explain"><!--p>На этом экране под защитным слоем может находиться какое-то рекламное предложение от компании. Например, объявление о привозе, об акции "скидка на все", предложение посетить магазин / салон в декабре или в январе и т.д. &mdash; что угодно, что вы хотите сообщить вашей аудитории, людям, которые указали, что они <b><i>хотят</i></b> поучаствовать в розыгрыше подарков от вашей организации.</p--></div>
                 </div>
               </div>
 
