--- a/webapp/index.html
+++ b/webapp/index.html
@@ -62,7 +62,7 @@
         window.Telegram.WebApp.setHeaderColor("#fffaf0");  // floralwhite
 
         first_screen();
-        //start_countdown();
+        //second_screen();
       }
     </script>
   </head>
@@ -85,7 +85,7 @@
                 <option value="35">Вологодская обл.</option>
                 <option value="53">Новгородская обл.</option>
                 <option value="50">г. Москва и МО</option>
-                <option value="-2">- другой регион -</option>
+                <option value="-2">- другой -</option>
               </select>
 
               <label id="city_label" style="display: none;">Город, в котором вы живете:</label>
@@ -104,7 +104,7 @@
                 <option value="11">Сегежа</option>
                 <option value="12">Сортавала</option>
                 <option value="13">Суоярви</option>
-                <option value="-2">- другой населенный пункт -</option>
+                <option value="-2">- другой -</option>
               </select>
 
               <label>Ваш пол:</label>
@@ -137,19 +137,46 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 offset-lg-3 col-10 offset-1">
+        </div>
+      </div>
             <div id="second_screen">
-              <img id="logo_mk" class="brand" style="border-radius: 8px 8px 0 0;" src="https://leonardo.edadeal.io/dyn/re/coupons/retailers/logos/sq/c378b8c860914bf3abdf8fd186e8ad33.png">
-              <img id="logo_lenta" class="brand" style="border-radius: 0 0 8px 8px;" src="https://nlp-murmansk.ru/storage/app/media//%D0%BB%D0%B5%D0%BD%D1%82%D0%B0.png">
+              <img class="brand mk" src="https://www.dropbox.com/scl/fi/s0rejaxwzq28zkfyoghcz/mk.png?rlkey=2hdn0yu0q9fkj1c5vbf1zc16e&raw=1">
+              <img class="brand lenta" src="https://www.dropbox.com/scl/fi/ahyoinx6aegf9lh4hnarq/lenta.png?rlkey=jhl49ms1h2cuc6el0tblj8q97&raw=1">
+              <img class="brand mk" src="https://www.dropbox.com/scl/fi/s0rejaxwzq28zkfyoghcz/mk.png?rlkey=2hdn0yu0q9fkj1c5vbf1zc16e&raw=1">
+              <img class="brand lenta" src="https://www.dropbox.com/scl/fi/ahyoinx6aegf9lh4hnarq/lenta.png?rlkey=jhl49ms1h2cuc6el0tblj8q97&raw=1">
+              <img class="brand mk" src="https://www.dropbox.com/scl/fi/s0rejaxwzq28zkfyoghcz/mk.png?rlkey=2hdn0yu0q9fkj1c5vbf1zc16e&raw=1">
+              <img class="brand lenta" src="https://www.dropbox.com/scl/fi/ahyoinx6aegf9lh4hnarq/lenta.png?rlkey=jhl49ms1h2cuc6el0tblj8q97&raw=1">
+              <img class="brand mk" src="https://www.dropbox.com/scl/fi/s0rejaxwzq28zkfyoghcz/mk.png?rlkey=2hdn0yu0q9fkj1c5vbf1zc16e&raw=1">
+              <img class="brand lenta" src="https://www.dropbox.com/scl/fi/ahyoinx6aegf9lh4hnarq/lenta.png?rlkey=jhl49ms1h2cuc6el0tblj8q97&raw=1">
+              <img class="brand mk" src="https://www.dropbox.com/scl/fi/s0rejaxwzq28zkfyoghcz/mk.png?rlkey=2hdn0yu0q9fkj1c5vbf1zc16e&raw=1">
+              <img class="brand lenta" src="https://www.dropbox.com/scl/fi/ahyoinx6aegf9lh4hnarq/lenta.png?rlkey=jhl49ms1h2cuc6el0tblj8q97&raw=1">
+              <img class="brand mk" src="https://www.dropbox.com/scl/fi/s0rejaxwzq28zkfyoghcz/mk.png?rlkey=2hdn0yu0q9fkj1c5vbf1zc16e&raw=1">
+              <img class="brand lenta" src="https://www.dropbox.com/scl/fi/ahyoinx6aegf9lh4hnarq/lenta.png?rlkey=jhl49ms1h2cuc6el0tblj8q97&raw=1">
+              <img class="brand mk" src="https://www.dropbox.com/scl/fi/s0rejaxwzq28zkfyoghcz/mk.png?rlkey=2hdn0yu0q9fkj1c5vbf1zc16e&raw=1">
+              <img class="brand lenta" src="https://www.dropbox.com/scl/fi/ahyoinx6aegf9lh4hnarq/lenta.png?rlkey=jhl49ms1h2cuc6el0tblj8q97&raw=1">
+              <img class="brand mk" src="https://www.dropbox.com/scl/fi/s0rejaxwzq28zkfyoghcz/mk.png?rlkey=2hdn0yu0q9fkj1c5vbf1zc16e&raw=1">
+              <img class="brand lenta" src="https://www.dropbox.com/scl/fi/ahyoinx6aegf9lh4hnarq/lenta.png?rlkey=jhl49ms1h2cuc6el0tblj8q97&raw=1">
+              <img class="brand mk" src="https://www.dropbox.com/scl/fi/s0rejaxwzq28zkfyoghcz/mk.png?rlkey=2hdn0yu0q9fkj1c5vbf1zc16e&raw=1">
+              <img class="brand lenta" src="https://www.dropbox.com/scl/fi/ahyoinx6aegf9lh4hnarq/lenta.png?rlkey=jhl49ms1h2cuc6el0tblj8q97&raw=1">
+              <img class="brand mk" src="https://www.dropbox.com/scl/fi/s0rejaxwzq28zkfyoghcz/mk.png?rlkey=2hdn0yu0q9fkj1c5vbf1zc16e&raw=1">
+              <img class="brand lenta" src="https://www.dropbox.com/scl/fi/ahyoinx6aegf9lh4hnarq/lenta.png?rlkey=jhl49ms1h2cuc6el0tblj8q97&raw=1">
+              <img class="brand mk" src="https://www.dropbox.com/scl/fi/s0rejaxwzq28zkfyoghcz/mk.png?rlkey=2hdn0yu0q9fkj1c5vbf1zc16e&raw=1">
+              <img class="brand lenta" src="https://www.dropbox.com/scl/fi/ahyoinx6aegf9lh4hnarq/lenta.png?rlkey=jhl49ms1h2cuc6el0tblj8q97&raw=1">
+              <img class="brand mk" src="https://www.dropbox.com/scl/fi/s0rejaxwzq28zkfyoghcz/mk.png?rlkey=2hdn0yu0q9fkj1c5vbf1zc16e&raw=1">
+              <img class="brand lenta" src="https://www.dropbox.com/scl/fi/ahyoinx6aegf9lh4hnarq/lenta.png?rlkey=jhl49ms1h2cuc6el0tblj8q97&raw=1">
+              <img class="brand mk" src="https://www.dropbox.com/scl/fi/s0rejaxwzq28zkfyoghcz/mk.png?rlkey=2hdn0yu0q9fkj1c5vbf1zc16e&raw=1">
+              <img class="brand lenta" src="https://www.dropbox.com/scl/fi/ahyoinx6aegf9lh4hnarq/lenta.png?rlkey=jhl49ms1h2cuc6el0tblj8q97&raw=1">
+              <img class="brand mk" src="https://www.dropbox.com/scl/fi/s0rejaxwzq28zkfyoghcz/mk.png?rlkey=2hdn0yu0q9fkj1c5vbf1zc16e&raw=1">
+              
             </div>
-          </div>
+          
           <div id="second_screen_explain">
             <div class="container">
               <div class="row">
                 <div class="col-lg-6 offset-lg-3 col-10 offset-1">
-                  <p style="text-align: center;">Выберите 1 или 2 бренда, для которых вы хотите поучаствовать в розыгрыше подарков.</p>
-                  <div class="d-grid gap-2">
-                    <button id="to_third" class="btn btn-primary" disabled>Далее</button>
+                  <div class="d-grid gap-2" style="width: 80vw;">
+                    <p>Выберите 1 или 2 бренда, в розыгрыше подарков от которых вы хотите участвовать</p>
+                    <button id="to_third" class="btn btn-primary" disabled>Участвовать в розыгрыше</button>
                   </div>
                 </div>
               </div>
