--- a/webapp/index.html
+++ b/webapp/index.html
@@ -175,7 +175,7 @@
               <div class="row">
                 <div class="col-lg-6 offset-lg-3 col-10 offset-1">
                   <div class="d-grid gap-2" style="width: 80vw;">
-                    <p>Выберите 1 или 2 бренда, в розыгрыше подарков от которых вы хотите участвовать</p>
+                    <p>Выберите 1 или несколько брендов, в розыгрыше подарков от которых вы хотите участвовать</p>
                     <button id="to_third" class="btn btn-primary" disabled>Участвовать в розыгрыше</button>
                   </div>
                 </div>
