--- a/webapp/index.html
+++ b/webapp/index.html
@@ -174,9 +174,9 @@
             <div class="container">
               <div class="row">
                 <div class="col-lg-6 offset-lg-3 col-10 offset-1">
-                  <div class="d-grid gap-2" style="width: 80vw;">
-                    <p>Выберите 1 или несколько брендов, в розыгрыше подарков от которых вы хотите участвовать</p>
+                  <div class="d-grid gap-2" style="width: 77vw;">
                     <button id="to_third" class="btn btn-primary" disabled>Участвовать в розыгрыше</button>
+                    <p>Выберите бренды, в розыгрыше подарков от которых вы хотите участвовать</p>
                   </div>
                 </div>
               </div>
