--- a/webapp/index.html
+++ b/webapp/index.html
@@ -143,7 +143,7 @@
               <div class="container">
               <div class="row">
                 <div class="col-lg-6 offset-lg-3 col-10 offset-1">
-                  <p style="margin-bottom: 1em;">Чтобы принять участие в розыгрыше, выберите ниже 1 или 2 бренда, в розыгрыше подарков от которых вы хотите поучаствовать на этих выходных</p>
+                  <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 бренда, в розыгрыше подарков от которых вы хотите поучаствовать на этих выходных</p>
                   <img class="brand mk" src="img/mk.png">
                   <img class="brand lenta" src="img/lenta.png">
                   
