--- a/webapp/index.html
+++ b/webapp/index.html
@@ -147,6 +147,7 @@
                   <img class="brand mk" src="img/mk.png">
                   <img class="brand lenta" src="img/lenta.png">
                   
+                  <p style="font-size: 0.8em; margin-top: 1em;"><b>Предпринимателям:</b> в этом декабре, среди 40+ других брендов, здесь может быть и ваш.</p>
                   <div class="d-grid gap-2" style="margin-top: 1em;">
                     <button id="to_third" class="btn btn-primary" disabled>Участвовать в розыгрыше</button>
                   </div>
