--- a/webapp/index.html
+++ b/webapp/index.html
@@ -61,8 +61,9 @@
         //window.Telegram.WebApp.setBackgroundColor("#fffaf0");  // floralwhite
         window.Telegram.WebApp.setHeaderColor("#fffaf0");  // floralwhite
 
-        first_screen();
+        //first_screen();
         //second_screen();
+        play();
       }
     </script>
   </head>
@@ -71,7 +72,7 @@
     <div id="intro">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 offset-lg-3 col-10 offset-1">
+          <div class="col-lg-4 offset-lg-4 col-10 offset-1">
             <div id="first_screen">
               <h2>Добро пожаловать!</h2>
               <p style="margin-bottom: 1em;">Прежде чем перейти к розыгрышам подарков, расскажите нам, пожалуйста, немного о себе.</p>
@@ -134,30 +135,33 @@
 
               <div class="d-grid gap-2">
                 <button id="to_second" class="btn btn-primary" disabled>Далее</button>
+                <p style="font-size: 0.8em;"><i>Далее: выбор брендов</i></p>
               </div>
             </div>
           </div>
         </div>
       </div>
-            <div id="second_screen">
-              <div class="container">
-              <div class="row">
-                <div class="col-lg-6 offset-lg-3 col-10 offset-1">
-                  <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 бренда, в розыгрыше подарков от которых вы хотите поучаствовать на этих выходных</p>
-                  <img class="brand mk" src="img/mk.png">
-                  <img class="brand lenta" src="img/lenta.png">
-                  
-                  <p style="font-size: 0.8em; margin-top: 1em;"><b>Предпринимателям:</b> в этом декабре, среди 40+ других брендов, здесь может быть и ваш.</p>
-                  <div class="d-grid gap-2" style="margin-top: 1em;">
-                    <button id="to_third" class="btn btn-primary" disabled>Участвовать в розыгрыше</button>
-                  </div>
-                </div>
+      <div id="second_screen">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 offset-lg-4 col-10 offset-1">
+              <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 бренда, в розыгрыше подарков от которых вы хотите поучаствовать на этих выходных</p>
+              <img class="brand mk" src="img/mk.png"><br>
+              <img class="brand lenta" src="img/lenta.png">
+              
+              <p style="font-size: 0.8em; margin-top: 1em;"><b>Предпринимателям:</b> в этом декабре, среди 40+ других брендов, здесь может быть и ваш!</p>
+              <div class="d-grid gap-2" style="margin-top: 1em;">
+                <button id="to_third" class="btn btn-primary" disabled>Участвовать в розыгрыше</button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-4 offset-lg-4 col-12">
 
     <div id="third_screen" class="swiper-outer" pagination="true">
       <div class="swiper-wrapper">
