--- a/webapp/index.html
+++ b/webapp/index.html
@@ -72,7 +72,7 @@
     <div id="intro">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 offset-lg-4 col-10 offset-1 screen">
+          <div class="col-lg-4 offset-lg-4 col-12 screen">
             <div class="col-10 offset-1">
               <div id="first_screen">
                 <h2>Добро пожаловать!</h2>
@@ -146,14 +146,14 @@
       
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 offset-lg-4 col-10 offset-1 screen">
+          <div class="col-lg-4 offset-lg-4 col-12 screen">
             <div class="col-10 offset-1">
               <div id="second_screen">
                 <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 бренда, в розыгрыше подарков от которых вы хотите поучаствовать на этих выходных</p>
                 <img class="brand mk" src="img/mk.png"><br>
                 <img class="brand lenta" src="img/lenta.png">
                 
-                <p style="font-size: 1em; margin-top: 1em;"><b>Предпринимателям:</b> в этом декабре, среди 40+ других брендов, здесь может быть и ваш!</p>
+                <p style="font-size: 1em; margin-top: 1em;"><b>Предпринимателям:</b> начиная с декабря, среди десятков других брендов, здесь может быть и ваш бренд</p>
                 <div class="d-grid gap-2" style="margin-top: 1em;">
                   <button id="to_third" class="btn btn-primary" disabled>Участвовать в розыгрыше</button>
                 </div>
