--- a/webapp/index.html
+++ b/webapp/index.html
@@ -136,7 +136,7 @@
 
                 <div class="d-grid gap-2">
                   <button id="to_second" class="btn btn-primary" disabled>Далее</button>
-                  <p style="font-size: 0.8em;"><i>Далее: выбор брендов</i></p>
+                  <!--p style="font-size: 0.8em;"><i>Далее: выбор брендов</i></p-->
                 </div>
               </div>
             </div>
