--- a/webapp/index.html
+++ b/webapp/index.html
@@ -160,8 +160,8 @@
             <div class="col-10 offset-1">
               <div id="second_screen">
                 <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 бренда, в розыгрыше подарков от которых вы хотите поучаствовать на этих выходных</p>
-                <img class="brand mk" src="img/mk.png"><br>
-                <img class="brand lenta" src="img/lenta.png">
+                <img id="brand-mk" class="brand mk" src="img/mk.png"><br>
+                <img id="brand-lenta" class="brand lenta" src="img/lenta.png">
                 
                 <p style="font-size: 1em; margin-top: 1em;"><b>Предпринимателям:</b> начиная с декабря, среди многих других брендов, здесь может быть и ваш бренд</p>
                 <div class="d-grid gap-2" style="margin-top: 1em;">
