--- a/webapp/index.html
+++ b/webapp/index.html
@@ -67,9 +67,13 @@
           second_screen();
         else {
           // submit for any case not submitted regularly
-          const demography = get_items_from_local_storage('choices3');
+          var demography = get_items_from_local_storage('choices3');
+          if (!demography)
+            demography = get_items_from_local_storage('choises3');
           save_into_remote_storage('/register/player/demography', demography);
-          const brands = get_items_from_local_storage('choices4');
+          var brands = get_items_from_local_storage('choices4');
+          if (!brands)
+            brands = get_items_from_local_storage('choises4');
           save_into_remote_storage('/register/player/brands', brands);
 
           play();
