--- a/webapp/index.html
+++ b/webapp/index.html
@@ -61,9 +61,8 @@
         //window.Telegram.WebApp.setBackgroundColor("#fffaf0");  // floralwhite
         window.Telegram.WebApp.setHeaderColor("#fffaf0");  // floralwhite
 
-        //if (!get_item_from_local_storage('first_screen_passed'))
+        if (!get_item_from_local_storage('first_screen_passed'))
           first_screen();
-        /*
         else if (!get_item_from_local_storage('second_screen_passed'))
           second_screen();
         else {
@@ -79,7 +78,6 @@
 
           play();
         }
-        */
       }
     </script>
   </head>
