--- a/webapp/index.html
+++ b/webapp/index.html
@@ -89,8 +89,8 @@
           <div class="col-lg-4 offset-lg-4 col-12 screen">
             <div class="col-10 offset-1">
               <div id="first_screen">
-                <h2>Добро пожаловать!</h2>
-                <p style="margin-bottom: 1em;">Прежде чем перейти к розыгрышам подарков, расскажите нам, пожалуйста, немного о себе.</p>
+                <h2>Здравствуйте!</h2>
+                <p style="margin-bottom: 1em;">Прежде чем перейти к розыгрышам подарков, расскажите нам, пожалуйста, немного о себе. Эта анкета и участие в розыгрыше <b>полностью анонимные</b>.</p>
                 <label>Регион, в котором вы живете:</label>
                 <select id="region" class="form-select">
                   <option value="-1" selected>- выберите -</option>
@@ -163,13 +163,14 @@
           <div class="col-lg-4 offset-lg-4 col-12 screen">
             <div class="col-10 offset-1">
               <div id="second_screen">
-                <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 бренда, в розыгрыше подарков от которых вы хотите поучаствовать на этих выходных</p>
+                <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 бренда, в пробном розыгрыше подарков от которых вы хотите поучаствовать на выходных 9&nbsp;и&nbsp;10&nbsp;ноября:</p>
                 <img id="brand-mk" class="brand mk" src="img/mk.png"><br>
                 <img id="brand-lenta" class="brand lenta" src="img/lenta.png">
                 
-                <p style="font-size: 1em; margin-top: 1em;"><b>Предпринимателям:</b> начиная с декабря, среди многих других брендов, здесь может быть и ваш бренд</p>
-                <div class="d-grid gap-2" style="margin-top: 1em;">
+                <div class="d-grid gap-2" style="margin-top: 1.3em;">
                   <button id="to_third" class="btn btn-primary" disabled>Участвовать в розыгрыше</button>
+
+                  <p style="font-size: 0.82em; margin-top: 0.5em;"><b>Предпринимателям:</b> начиная с декабря 2024, среди многих других брендов здесь может быть и ваш! Если вы хотите быть здесь, напишите об этом админу в "Сегежские Будни".</p>
                 </div>
               </div>
             </div>
