--- a/webapp/index.html
+++ b/webapp/index.html
@@ -89,7 +89,7 @@
           <div class="col-lg-4 offset-lg-4 col-12 screen">
             <div class="col-10 offset-1">
               <div id="first_screen">
-                <h2>Здравствуйте!</h2>
+                <h2>Добро пожаловать!</h2>
                 <p style="margin-bottom: 1em;">Прежде чем перейти к розыгрышам подарков, расскажите нам, пожалуйста, немного о себе. Эта анкета и участие в розыгрыше <b>полностью анонимные</b>.</p>
                 <label>Регион, в котором вы живете:</label>
                 <select id="region" class="form-select">
