--- a/webapp/index.html
+++ b/webapp/index.html
@@ -170,7 +170,7 @@
                 <div class="d-grid gap-2" style="margin-top: 1.3em;">
                   <button id="to_third" class="btn btn-primary" disabled>Участвовать в розыгрыше</button>
 
-                  <p style="font-size: 0.82em; margin-top: 0.5em;"><b>Предпринимателям:</b> начиная с декабря 2024, среди многих других брендов здесь может быть и ваш! Если вы хотите быть здесь, напишите об этом админу в "Сегежские Будни".</p>
+                  <p style="font-size: 0.82em; margin-top: 0.5em;"><b>Предпринимателям:</b> начиная с декабря 2024, среди многих других брендов здесь может быть и ваш! Если вы хотите быть здесь, напишите об этом сюда: <a href="https://vk.com/adwesome">@adwesome</a></p>
                 </div>
               </div>
             </div>
