--- a/webapp/index.html
+++ b/webapp/index.html
@@ -181,7 +181,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-4 offset-lg-4 col-12">
+    <div class="col-xl-4 offset-xl-4 col-lg-6 offset-lg-3 col-12">
 
     <div id="third_screen" class="swiper-outer" pagination="true">
       <div class="swiper-wrapper">
