--- a/webapp/index.html
+++ b/webapp/index.html
@@ -206,7 +206,7 @@
                 <p id="flipdown_header">Через</p>
                 <div id="flipdown" class="flipdown"></div>
                 <div id="flipdown_explain">
-                  <p><span class="conditions"><span id="percent"></span>%</span> участников получат подарок от <span class="conditions" id="who"></span>. Вы участвуете&nbsp;👍</p>
+                  <p><span class="conditions"><span id="percent"></span>%</span> участников выиграют подарок от <span class="conditions" id="who"></span>. Вы участвуете&nbsp;👍</p>
                 </div>
               </div>              
 
