--- a/webapp/index.html
+++ b/webapp/index.html
@@ -165,14 +165,14 @@
           <div class="col-lg-4 offset-lg-4 col-12 screen">
             <div class="col-10 offset-1">
               <div id="second_screen">
-                <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 бренда, в пробном розыгрыше подарков от которых вы хотите поучаствовать на выходных 9&nbsp;и&nbsp;10&nbsp;ноября:</p>
+                <p style="margin-bottom: 1em;">Выберите ниже 1 или 2 бренда, в пробном розыгрыше подарков от которых вы хотите поучаствовать на выходных 16&nbsp;и&nbsp;17&nbsp;ноября:</p>
                 <img id="brand-mk" class="brand mk" src="img/brands/logos/mk.png"><br>
                 <img id="brand-lenta" class="brand lenta" src="img/brands/logos/lenta.png">
                 
                 <div class="d-grid gap-2" style="margin-top: 1.3em;">
                   <button id="to_third" class="btn btn-primary" disabled>Участвовать в розыгрыше</button>
 
-                  <p style="font-size: 0.82em; margin-top: 0.5em;"><b>Предпринимателям:</b> начиная с декабря 2024, среди многих других брендов здесь может быть и ваш! Если вы хотите быть здесь, напишите об этом сюда: <a href="https://vk.com/adwesome" target="_blank">@adwesome</a></p>
+                  <p style="font-size: 0.82em; margin-top: 0.5em;"><b>Предпринимателям:</b> начиная с декабря 2024, среди многих других брендов здесь может быть и ваш! Если вы хотите быть здесь, и мы с вами еще не общались, <a href="https://vk.com/adwesome" target="_blank">напишите об этом нам</a>.</p>
                 </div>
               </div>
             </div>
@@ -217,8 +217,10 @@
         <div id="list" class="swiper-slide non-white-bg">
           <h2>Розыгрыши</h2>
           <div id="drawings_list">
-            <h3>Вчера</h3>
-            <div id="just"><p>Нет</p></div>
+            <div id="yesterday">
+              <h3>Вчера</h3>
+              <div id="just"><p>Нет</p></div>  
+            </div>
             <h3>Сегодня</h3>
             <div id="now"><p>Нет</p></div>
             <h3>Завтра</h3>
