--- a/webapp/index.html
+++ b/webapp/index.html
@@ -195,7 +195,7 @@
                 <!-- https://codepen.io/Totati/pen/pPXrJV -->
                 <!-- https://github.com/andreruffert/scratchie.js -->
                 <div class="container-" id="js-container">
-                  <p id="js-canvas-explain">сотрите защитный слой<br>полностью</p>
+                  <p id="js-canvas-explain">сотрите защитный слой<br><b>ПОЛНОСТЬЮ</b></p>
                   <canvas class="canvas" id="js-canvas"></canvas>
                   <div id="ad"></div>
                   <div id="ad_explain"><!--p>На этом экране под защитным слоем может находиться какое-то рекламное предложение от компании. Например, объявление о привозе, об акции "скидка на все", предложение посетить магазин / салон в декабре или в январе и т.д. &mdash; что угодно, что вы хотите сообщить вашей аудитории, людям, которые указали, что они <b><i>хотят</i></b> поучаствовать в розыгрыше подарков от вашей организации.</p--></div>
